libinteraction-sparky (0.0.1-1365677109) @platform@; urgency=low

  * Commit 4007f5dd4c107328139c78d6af261811821c851f
    + Added i386 to build.

 -- Edward T. Kaszubski <ekaszubski@gmail.com>  Thu, 11 Apr 2013 03:45:09 -0700

libinteraction-sparky (0.0.1-1365676077) @platform@; urgency=low

  * Commit 0aa247949c95ca75b61a711678037aabfca49c1f
    + Changed joint and servo names in params.yaml to match names in URDF.

 -- Edward T. Kaszubski <ekaszubski@gmail.com>  Thu, 11 Apr 2013 03:27:57 -0700

libinteraction-sparky (0.0.1-1365674430) @platform@; urgency=low

  * Commit f7462f4fd23cd8a8cf6fd8645c34a421541d38d1
    + Removed unused params and added remaining params to default install target.

 -- Edward T. Kaszubski <ekaszubski@gmail.com>  Thu, 11 Apr 2013 03:00:30 -0700

libinteraction-sparky (0.0.1-1365674048) @platform@; urgency=low

  * Commit e5d37bcc102e1d8dd425bc05883dbcc7f415e790
    + Added muparser and yaml-cpp as pkg-config requires for sparky.

 -- Edward T. Kaszubski <ekaszubski@gmail.com>  Thu, 11 Apr 2013 02:54:08 -0700

libinteraction-sparky (0.0.1-1365671956) @platform@; urgency=low

  * Commit acde808872c02d5ffec42b00ca01400ccfa87aee
    + Fixed more debian issues.

 -- Edward T. Kaszubski <ekaszubski@gmail.com>  Thu, 11 Apr 2013 02:19:16 -0700

libinteraction-sparky (0.0.1-1365667314) @platform@; urgency=low

  * Commit 88678337c74ad247ea2cecdec742af1b3884393c
    + Removed unnecessary links file.

 -- Edward T. Kaszubski <ekaszubski@gmail.com>  Thu, 11 Apr 2013 01:01:54 -0700

libinteraction-sparky (0.0.1-1365665280) @platform@; urgency=low

  * Commit c86f4e217ebb9ccafed847a0b37a5172de42428c
    + Fixed remaining sparky debian files.

 -- Edward T. Kaszubski <ekaszubski@gmail.com>  Thu, 11 Apr 2013 00:28:00 -0700

libinteraction-sparky (0.1.0-1365654416) @platform@; urgency=low

  * Commit c2574535ec44065d5b9a5471dcbdadd4779fc25e
    + Added changelog.in for sparky.
