@@ -176,7 +176,9 @@ joints:
   home: 0.0
   servo_radius: 1.7
   piston_length: 7.5
-  joint_radius: 1.8
+  joint_length: 3.4
+  joint_radius: 2.2
+  joint_offset: 120.0
 - name: RtArmForward
   joint_limits: [[12.0, 28.0], [96.0, 150.0]]
   home: 12.0
