@@ -4,7 +4,7 @@
 // executes main program code
 int main( int argc, char** argv )
 {
-    std::string yaml_doc_path = "params/params_prototype1.yaml";
+    std::string yaml_doc_path = "params/params.yaml";
 
     if( argc <= 1 ) PRINT_DEBUG( "Using default path [ %s ] for yaml document.\n", yaml_doc_path.c_str() );
     else
@@ -22,10 +22,13 @@ int main( int argc, char** argv )
 
     sparky::SparkyController sparky( nodes, true );
 
-    std::vector<std::string> target_joints{ "l_elbow", "r_elbow", "l_arm_out", "r_arm_out", "l_arm_fwd", "r_arm_fwd" };
+    auto const & joints_map = sparky.joint_angle_controller_.getJoints();
+
+    std::vector<std::string> target_joints{ "HeadTurn", "LtElbow", "RtElbow", "LtArmOut", "RtArmOut", "LtArmForward", "RtArmForward" };
     for( auto joint_name_it = target_joints.cbegin(); joint_name_it != target_joints.cend(); ++joint_name_it )
     {
         std::string const & joint_name = *joint_name_it;
+        auto const & joint_it = joints_map.find( joint_name );
 
         sparky::JointAnglePair const min_limit = sparky.joint_angle_controller_.getJointAngleMinLimitPair( joint_name );
         sparky::JointAnglePair const max_limit = sparky.joint_angle_controller_.getJointAngleMaxLimitPair( joint_name );
@@ -33,22 +36,26 @@ int main( int argc, char** argv )
         double const max_joint_angle = max_limit.first;
 
         int const num_segments = 10;
-        for( int i = 0; i < num_segments; ++i )
+        for( int i = 0; i <= num_segments; ++i )
         {
             double const segment = min_joint_angle + ( max_joint_angle - min_joint_angle ) * (double)( i ) / (double)(num_segments);
             sparky.setJointAngle( joint_name, segment );
             usleep( 1.0 * 1000000 / num_segments );
         }
-        for( int i = 0; i < num_segments; ++i )
+        for( int i = 0; i <= num_segments; ++i )
         {
             double const segment = min_joint_angle + ( max_joint_angle - min_joint_angle ) * (double)( num_segments - i ) / (double)(num_segments);
             sparky.setJointAngle( joint_name, segment );
             usleep( 1.0 * 1000000 / num_segments );
         }
+        usleep( 0.25 * 1000000 );
+        sparky.setJointAngle( joint_name, joint_it->second.home_ );
     }
 
-//    sparky.setJointAngle( "r_arm_fwd", 90 );
+/*
+    sparky.setJointAngle( "HeadTurn", -30 );
     sleep( 2 );
-
+    sparky.setJointAngle( "HeadTurn", 30 );
+*/
     return 0;
 } // main(int, char**)
